--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,140 @@
-.App {
-  text-align: center;
+
+
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video{
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol, ul {
+  list-style: none;
+}
+blockquote, q {
+  quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.container {
+  background-color: hsl(0, 100%, 74%);
+  background-image: url(images/bg-intro-desktop.png);
+  color: #fff;
+  padding: 0px 60px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 100vh;
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.item1,
+.item2 {
+  width: 50%;
+  padding: 0px 30px;
+}
+
+.item2 {
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
 }
 
-.App-link {
-  color: #61dafb;
+h1 {
+  font-size: 2.25em;
+  font-weight: 700;
+  padding: 30px 0px;
+}
+p {
+  line-height: 2;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+button {
+  background-color: hsl(248, 32%, 49%);
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 70px;
+  margin: 15px 0px;
+}
+
+form {
+  background-color: #fff;
+  padding: 30px;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+}
+
+form input {
+  margin: 5px 0px;
+}
+
+form p {
+  color: hsl(246, 25%, 77%);
+  line-height: 1;
+}
+
+form p span {
+  color: hsl(0, 100%, 74%);
+}
+
+form button {
+  background-color: hsl(154, 59%, 51%);
+  /* padding: 10px 30px;   */
+}
+
+@media screen and (max-width: 778px){
+  .container {
+    background-image: url(images/bg-intro-mobile.png);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
   }
-  to {
-    transform: rotate(360deg);
+  .item1,
+  .item2 {
+    width: 100%;
+    padding: 15px 30px;
   }
 }
